# goit-pythonweb-hw-03

./: Dockerfile  docker-compose.yaml  index.html  main.py  message.html  pyproject.toml  read.html
storage/: data.json
