[tool.poetry]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = ["Oleksandr Balashov <aleksandr.balashov.sax@gmai.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

black = "25.1.0"
click = "8.1.8"
Jinja2 = "3.1.5"
MarkupSafe = "3.0.2"
mypy-extensions = "1.0.0"
packaging = "24.2"
pathspec = "0.12.1"
platformdirs = "4.3.6"
